tests/NormalTests/paczka1/small_fuzzy/27091481.err
Error in line 1: anWaZ A334 73,42
Error in line 12: anWaZ A334 -1,3
